public/css/layout.css
/******************************************************************
 * For fixed header
 ******************************************************************/
body {
    padding-top: 70px;
}

.series-list .row {
    margin-bottom: 5px;
}

.series-list .thumbnail img {
    min-height: 100%;
    min-width: 100%;
}

.series-list .thumbnail p {
    margin: 0px;
}

.series-list a.thumbnail:hover {
    text-decoration: none;
    box-shadow: 0 1px 5px #2A6496;
}

.infosArray .row:nth-of-type(even) {
    background: #f5f5f5;
}

img.series-show {
    min-width: 100%;
}

.loan-button {
    margin-top: 10px;
}

a.thumbnail+input[type=checkbox] {
    position: absolute;
    top: 3px;
    right: 23px;
}

